mikec/tests/PASS/base/assign/11.mc
/* Assign int value to int */
void main()
{
	int a = 5;
}