mikec/tests/FAIL/assign/21.mc
/* Assign string value without quotes */
void main()
{
	string a = a;
}